# CwAPI3D-CMake-App

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json
cmake/: qt_toolchain.cmake
include/app/: CommandProcessor.hh  IElementCreationRegistry.hh  IElementCreationService.hh
include/math/: Vector3D.h
include/models/: ApplicationException.hh  CMakeLists.txt  ElementCreationException.hh  ElementDimension.h  ElementLocalAxis.h
include/models/presentation/: ICommandProcessor.hh
include/presentation/ui/: commanddialog.hh  exports.h
include/presentation/viewmodel/: CommandViewModel.hh  exports.h
src/app/: CMakeCwAPI3D.cpp  CMakeCwAPI3D.h  CMakeLists.txt  CommandProcessor.cc  ElementCreationRegistry.cpp  ElementCreationRegistry.h  ElementCreationService.cc  ElementCreationService.hh  ElementFromPointsFactory.cpp  ElementFromPointsFactory.h  ElementLocalAxis.h
src/cwAdapter/: CMakeLists.txt  ElementCreationRegistry.cpp  ElementCreationRegistry.h  library.cc
src/cwPluginMain/: CMakeLists.txt  library.cc
src/math/: CMakeLists.txt  Vector3D.cpp
src/presentation/ui/: CMakeLists.txt  CommandDock.qml  commanddialog.cc  commanddialog.ui  resources.qrc
src/presentation/viewmodel/: CMakeLists.txt  CommandViewModel.cc
tests/: CMakeLists.txt  example.cpp
